add_executable(resolver
  ${SRC}/ctx/ctx.c
  ${SRC}/intern/context.c
  ${SRC}/intern/intern.c
  ${SRC}/enum/enum.c
  ${SRC}/event/event.c
  ${SRC}/external/cJSON.c
  ${SRC}/external/git.c
  ${SRC}/external/tom.c
  ${SRC}/codegen/codegen.c
  ${SRC}/codegen/json.c
  ${SRC}/codegen/options.c
  ${SRC}/codegen/when.c
  ${SRC}/codegen/lower.c
  ${SRC}/when/when.c
  ${SRC}/toolchain/catalog.c
  ${SRC}/codegen/gen/toolchains.gen.c
  ${SRC}/codegen/gen/config.gen.c
  ${SRC}/codegen/gen/manifest.gen.c
  ${SRC}/codegen/gen/release.gen.c
  ${SRC}/index/index.c
  ${SRC}/index/json.c
  ${SRC}/sp/io.c
  ${SRC}/pkg/id.c
  ${SRC}/pkg/load.c
  ${SRC}/pkg/mutate.c
  ${SRC}/profile/profile.c
  ${SRC}/session/registry/registry.c
  ${SRC}/triple/triple.c
  ${SRC}/resolve/resolve.c
  ${SRC}/sp/str.c
  ${SRC}/semver/compare.c
  ${SRC}/semver/convert.c
  ${SRC}/semver/parser.c
  ${SRC}/target/mutate.c
  ${SRC}/target/select.c
  ${SRC}/toolchain/toolchain.c
  main.c
  ${TEST_TOOLS}/ctx.c
  ${TEST_TOOLS}/sp_fuzz.c
  ${TEST_TOOLS}/tmp.c
  ${TEST_TOOLS}/git.c
  ${TEST_TOOLS}/toml.c
)
spn_test_binary(resolver)
target_include_directories(resolver PRIVATE ${SRC}/codegen/gen)
target_link_libraries(resolver PRIVATE yyjson)
add_dependencies(resolver spn_codegen_gen)
add_test(NAME resolver COMMAND "$<TARGET_FILE:resolver>")
